--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"></script>
 </head>
 <body>
-<div id="app-container">
-    Loading
+<div id="root">
 </div>
 
  <script src="/main.c48de7d3.js"></script>
