--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="root">
 </div>
 
- <script src="/main.c48de7d3.js"></script>
+ <script src="/main.c48de7d3.js?v=4"></script>
 
 </body>
 </html>
