--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
-    <title>English</title>
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&subset=latin-ext,vietnamese" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&subset=latin-ext,vietnamese" rel="stylesheet">
+  <title>Coffee</title>
 </head>
-<body>
-<div id="root">
-</div>
 
- <script src="/main.c48de7d3.js?v=4"></script>
-
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root">Loading</div>
+  <div id="modal-registry"></div>
+  <script type="text/javascript" src="/English/main.c48de7d3.js"></script>
 </body>
+
 </html>
