--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&subset=latin-ext,vietnamese" rel="stylesheet">
- <link rel="stylesheet" href="English/main.7ff541eb.css?v=4">
+ <link rel="stylesheet" type="text/css" href="English/main.7ff541eb.css?v=4">
   <title>English</title>
 </head>
 
