--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&subset=latin-ext,vietnamese" rel="stylesheet">
- <link rel="stylesheet" type="text/css" href="English/main.7ff541eb.css?v=4">
+ <link rel="stylesheet" type="text/css" href="English/main.7ff541eb.css">
   <title>English</title>
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">Loading</div>
   <div id="modal-registry"></div>
-  <script type="text/javascript" src="/English/main.c48de7d3.js?v=4"></script>
+  <script type="text/javascript" src="/English/main.c48de7d3.js"></script>
 </body>
 
 </html>
