--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&subset=latin-ext,vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
- <link rel="stylesheet" type="text/css" href="English/main.7ff541eb.css">
+ <link rel="stylesheet" type="text/css" href="/main.7ff541eb.css">
   <title>English</title>
 </head>
 
