--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.2.0/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.2.0/umd/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
- <link rel="stylesheet" type="text/css" href="/main.7ff541eb.css">
+ <link rel="stylesheet" type="text/css" href="/English/main.7ff541eb.css">
   
   <title>English</title>
 </head>
